fixed spelling in title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Morgan Little's p[ersonal website for Thinkful </title>
+    <title>Morgan Little's personal website for Thinkful </title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
