--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
     </div>
     <div class="item">
       <h3>Contact me!</h3>
-      <p>My email is <b>mrgnlit@gmail.com</b></p>
+      <p>My email is <a href="mailto:mrgnlit@gmail.com">mrgnlit@gmail.com</a></p>
       <p>Feel free to also use the contact form below!</p>
+      <br>
       <form action="https://formspree.io/xknqdnvr" method="POST">
         <!-- Name -->
         <label for="user-name">Name:</label>
