--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <nav>
+      <ul class = "group">
+        <li class="item"><a href="#intro">Introduction</a></li>
+        <li class="item"><a href="#aboutMe">News</a></li>
+        <li class="item"><a href="#contact">Contact</a></li>
+        <li class="item"><a href="#projectSection">About</a></li>
+      </ul>
+    </nav>
     <main>
   <!-- This is my intro section  -->
 <h1>Intro to Morgan Little's website.</h1>
-<section> 
-<div class="group">
+<section id="intro"> 
+<header class="group">
   <div class="item blue">
     <h3>My name is Morgan Little</h3>
     <img src="images/morgCello.JPG" alt="a picture of morgan Little playing cello"/>
   </div>
-  <!-- <div class="verticalLine" "item">
-    </div> -->
   <div class="item">
     <h3>I am from Los Angeles, California.</h3>
     <img src="images/California.gif" alt="california"/>
@@ -26,43 +32,53 @@
     <h3>I play the cello and I am a web development student.</h3>
     <img src="images/cellobow.gif" alt="a bird dancing"/>
   </div>
-</div>
+</header>
 </section>
 <!-- This is my about me section -->
 <h1>About me</h1>
-<section>
-<div class="group">
-  <div class="item">
+<section id = "aboutMe">
+<header class="group">
+  <article class="item">
   <h3>I have been developing a passion for web design ever since I started studying at Thinkful.</h3>
   <img src="images/computer_surfing_sm.gif" alt="a computer surfing" />
   <p> I find that coding is simmilar to music in many ways. It is all about putting a lot of small detailed things together to produce a larger product.</p>
-  <p>During my time in the Thinkful program I have been seeing many paralells to learning music and coding webdesign and I have been very happy with the material I have learned how to produce.,?p>
-  </div>
-  <div class="item">
+  <p>During my time in the Thinkful program I have been seeing many paralells to learning music and coding webdesign and I have been very happy with the material I have learned how to produce. </p>
+  </article>
+  <article class="item">
+<h3>Services I can provide </h3>
+<ul>
+  <li>Good communication</li>
+  <li>Fresh baked goods</li>
+  <li>Responsive html and css layout creation</li>
+  <li>Supreme flexbox mastery</li>
+  <li>Ability to use most models of coffee makers</li>
+</ul>
+  </article>
+  <article class="item">
     <h3>I would love to work on a team with other coders in real life.</h3>
     <img src="images/penguin.gif" alt="a penguin dancing" />
     <p>So much of life is working with others to produce something great. I love being part of a team and contributing to a greater goal together.</p>
-  </div>
-  <div class="item">
+  </article>
+  <article class="item">
   <h3>outside of webdevelopment, I play the cello.</h3>
   <img src="images/Dancing_musicalnotes.gif" alt="dancing musicalnotes" />
   <p> As I said before, I am a professional musician and I play the cello. I have been playing since I was 6 and I love performing. </p>
-  </div>
-</div>
+  </article>
+</header>
 </section>
 <!-- This is my contact section with a form added-->
 <h1>Contact me!</h1>
-<section>
-  <div class="group">
-    <div class="item">
+<section id="contact">
+  <header class="group">
+    <article class="item">
       <h3><a href="https://github.com/mlittle5">Github profile</a></h3>
       <img src="images/GitHub-Mark-120px-plus.png" alt="github mark" />
-    </div>
-    <div class="item">
+    </article>
+    <article class="item">
       <h3><a href="https://www.linkedin.com/in/morgan-little-bbaa0b1b4/">Linkedin profile</a></h3>
       <img src="images/LI-In-Bug.png" alt="linkedin" />
-    </div>
-    <div class="item">
+    </article>
+    <article class="item">
       <h3>Contact me!</h3>
       <p>My email is <a href="mailto:mrgnlit@gmail.com">mrgnlit@gmail.com</a></p>
       <p>Feel free to also use the contact form below!</p>
@@ -80,32 +96,42 @@
         <!-- Submit button -->
         <button type="submit">Submit</button>
       </form>
-    </div>
-  </div>
+    </article>
+  </header>
 </section>
 <!-- This is my project section -->
 <h1>Project section</h1>
-<section>
-  <div class="group">
-    <div class="item">
+<section id="projectSection">
+  <header class="group">
+    <article class="item">
+      <h2>Project Name</h2>
     <h3>Online metronome</h3>
-    </div>
-    <div class="item">
+    <p>This is a metronome that can be used by anyone who has an internet connection.</p>
+    </article>
+    <article class="item">
       <h3>What is this project about?</h3>
-      <p>This is a metronome that can be used by anyone who has an internet connection.</p>
       <p> A metronome is an incredibly useful tool when practicing any kind of music, and having access to a metronome anywhere you have an internet connection is extremely helpful.</p>
       <p> The skills used in creating this project are:</p>
-      <ul>
-        <li>A blinking light animation</li>
-        <li>Playing a sound at a constant rate</li>
-        <li>being able to adjust the rate at which the metronome clicks</li>
-      </ul>
-    </div>
-    <div class="item">
-      <h3><a href="https://en.wikipedia.org/wiki/Placeholder">Link to project.</a></h3>
-      <a href="https://github.com/mlittle5/Metronome-Placeholder">Link to Github repo.</a>
-    </div>
-    </div>
+      <ol>
+        <li>using css and html to create a blinking light that synchs to a timecode</li>
+        <br>
+        <li>using javascript to play a beep that synchs to the same timecode</li>
+        <br>
+        <li>using an html and css interface to adjust the rate at which the metronome beeps</li>
+      <br>
+      </ol>
+    </article>
+    <article class = "item">
+      <h3>Who is this project for and why did I choose this project?</h3>
+      <p> This project is for people who need quick acess to a metronome and do not want to install any apps or programs to their phone or computer.</p>
+    <br>
+      <p> I chose to create this project becuase I have found myself needing a metronome and do not want to download an app to use it. It is also very helpful in teaching situations where you need a metronome on the fly.</p>
+    </article>
+    <article class="item">
+      <h3><a href="https://github.com/mlittle5/metronome">Link to a simmilar project That I forked for the purposes of this exercise.</a></h3>
+      <a href="https://modelm.github.io/metronome/">Link to the forked Github repo.</a>
+    </article>
+  </header>
 </section>
 </main>
     <script src="script.js"></script>
