fixed html warnings

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html >
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -17,8 +17,8 @@
     </nav>
     <main>
   <!-- This is my intro section  -->
-<h1>Intro to Morgan Little's website.</h1>
-<section id="intro"> 
+  <section id="intro"> 
+  <h1>Intro to Morgan Little's website.</h1>
 <header class="group">
   <div class="item blue">
     <h3>My name is Morgan Little</h3>
@@ -35,8 +35,9 @@
 </header>
 </section>
 <!-- This is my about me section -->
-<h1>About me</h1>
+
 <section id = "aboutMe">
+<h1>About me</h1>
 <header class="group">
   <article class="item">
   <h3>I have been developing a passion for web design ever since I started studying at Thinkful.</h3>
@@ -67,8 +68,9 @@
 </header>
 </section>
 <!-- This is my contact section with a form added-->
-<h1>Contact me!</h1>
+
 <section id="contact">
+<h1>Contact me!</h1>
   <header class="group">
     <article class="item">
       <h3><a href="https://github.com/mlittle5">Github profile</a></h3>
@@ -100,9 +102,10 @@
   </header>
 </section>
 <!-- This is my project section -->
-<h1>Project section</h1>
+
 <section id="projectSection">
-  <header class="group">
+<h1>Project section</h1> 
+ <header class="group">
     <article class="item">
       <h2>Project Name</h2>
     <h3>Online metronome</h3>
